syntax="proto3";
package proto;

option java_package = "ro.mpp.protobuffprotocol";
option java_outer_classname = "CompetitionProtocol";



message User {
    string username = 1;
    string password = 2;
}

message Competition {
    string trial = 1;
    int32 startingAgeInterval = 2;
    int32 endingAgeInterval = 3;
}

message CompetitionEntry {
    Competition key = 1;
    int32 value = 2;
}

message AllCompetitionsDTO {
    repeated CompetitionEntry competitions = 1;
}

message Participant{
    string name = 1;
    string birthDate = 2;
}

message Registration{
    Participant participant = 1;
    Competition competition = 2;
}

message RegisterParticipantDTO{
    string name =1;
    string birthDate = 2;
    string proba = 3;
}

message ParticipantEntry{
    Participant participant = 1;
    repeated int32 competitions=2;
}

message Request{
    enum RequestType{
        LOGIN = 0;
        LOGOUT = 1;
        SIGNUP = 2;
        GET_COMPETITIONS = 3;
        REGISTER_PARTICIPANT = 4;
        GET_NR_OF_PARTICIPANTS = 5;
        GET_PARTICIPANTS_BY_COMPETITION = 6;
    }

    RequestType request_type = 1;

    oneof data {
        User user = 2;
        string username = 3;
        RegisterParticipantDTO registerParticipant = 4;
        Competition competition = 5;
        int32 competitionId = 6;
    }
}


message Response {
    enum ResponseType{
        OK = 0;
        ERROR = 1;
        UPDATE = 2;
        GET_COMPETITIONS = 3;
        GET_PARTICIPANTS_FOR_COMPETITION = 4;
    }

    ResponseType response_type = 1;
    string error = 2;
    User user = 3;
    AllCompetitionsDTO allCompetitions = 4;
    repeated ParticipantEntry participants = 5;
    int32 noParticipants = 6;
}